<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="300dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_delete_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteFileOrDir"
        android:textSize="25sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_down_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloadFile"
        android:textSize="25sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_rename_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/renameFile"
        android:textSize="25sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="取消操作"
        android:textSize="25sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"/>
</LinearLayout>