<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:theme="@style/Theme.MaterialComponents"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20sp"
            app:cardElevation="20sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resUsername"
                        android:hint="@string/username"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="8"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resPassword"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="8"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resEnsurePassword"
                        android:inputType="textPassword"
                        android:hint="@string/ensurePassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>





        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="@color/FrenchSkyBlue"
            android:backgroundTintMode="src_over"
            android:background="@color/FrenchSkyBlue"
            android:src="@drawable/ic_air_outline"
            android:id="@+id/goRegister"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>